--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-
-
 .flex {
     display: flex;
 }
@@ -18,6 +16,41 @@
 
 .align-center {
     align-items: center;
+}
+
+
+.product-area {
+    margin: 3rem;
+    display: flex;
+    justify-content: start;
+    width: 1120px;
+    flex-wrap: wrap;
+    padding-left: 3rem;
+    padding-right: auto;
+}
+
+
+
+.card {
+    display: flex;
+    flex-direction: column;
+    width: 28%;
+    background-color: lightgrey;
+    height: 390px;
+    margin-left: 1rem;
+    margin-top: 1rem;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.img-card img {
+    width: 100%;
+    height: 320px
+}
+
+.description {
+    display: flex;
+    justify-content: space-around;
 }
 
 .home {
